--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,29 +1,43 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "description": "",
-  "main": "server/server.js",
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "cd server && npm start",
-    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
-    "heroku-postbuild": "cd client && npm run build"
-  },
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "apollo-server-express": "^3.12.0",
     "graphql": "^16.6.0",
     "if-env": "^1.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.3",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
-    "stripe": "^8.141.0"
+    "stripe": "^8.141.0",
+    "web-vitals": "^3.3.1"
   },
-  "devDependencies": {
-    "concurrently": "^5.1.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
