--- a/client/package.json
+++ b/client/package.json
@@ -5,26 +5,24 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@stripe/stripe-js": "^1.14.0",
+    "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.7",
     "apollo-link-context": "^1.0.20",
-    "graphql": "^14.6.0",
+    "graphql": "^16.6.0",
     "graphql-tag": "^2.10.3",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "redux": "^4.1.0",
-    "stripe": "^8.146.0"
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
