--- a/my-app/client/package.json
+++ b/my-app/client/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.5.1",
     "@stripe/stripe-js": "^1.14.0",
     "@testing-library/jest-dom": "^4.2.4",
