--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,14 +8,19 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
+    "if-env": "^1.0.4",
+    "react-bootstrap": "^2.7.4",
+    "react-icons": "^4.8.0",
+    "uikit": "^3.16.17"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "tailwindcss": "^3.3.2"
   }
 }
