--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@apollo/client": "^3.7.14",
     "apollo-boost": "^0.4.9",
     "if-env": "^1.0.4",
-    "react-router-dom": "^6.11.1"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
+    "uikit": "^3.16.17"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
