--- a/my-app/server/package.json
+++ b/my-app/server/package.json
@@ -15,8 +15,10 @@
     "apollo-server-express": "^2.11.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "stripe": "^12.4.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
