--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "apollo-boost": "^0.4.9",
+    "http-proxy-middleware": "^2.0.6",
     "if-env": "^1.0.4",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
