--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,14 +10,18 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "@apollo/client": "^3.7.14",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-react-hooks": "^0.0.1",
+    "if-env": "^1.0.4",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "webpack-cli": "^5.1.1"
   }
 }
