--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,24 +4,18 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start || npm run develop",
-    "start:pro": "node server/server.js",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "seed": "cd server && npm run seed"
+    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.7.14",
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-react-hooks": "^0.0.1",
-    "if-env": "^1.0.4",
-    "react-router-dom": "^6.11.1"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "webpack-cli": "^5.1.1"
+    "concurrently": "^5.1.0"
   }
 }
