--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "main": "server/server.js",
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
