--- a/my-app/server/package.json
+++ b/my-app/server/package.json
@@ -18,7 +18,8 @@
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "stripe": "^12.5.0"
+    "stripe": "^12.5.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
