added new branch heroku final

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://Midnimo:Warsan230@cluster0.qqd5iai.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://svattt7:H2nnXDgvPwMQS3cU@cluster1.hhb4lcx.mongodb.net/?retryWrites=true&w=majority
